# ai-rpg

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ui.py
.github/workflows/: lint.yml
ai_rpg/: __init__.py  ai_rpg.py  config.py  dice.py  ui.py  utils.py
ai_rpg/generators/: __init__.py  inventory.py  story.py  world.py
data/: config.yaml  llm-config.yaml  world_example.md
data/config/: ai-rpg-config.yaml  llm-config.yaml
data/generation/: inventory_example.yaml  story_example.md  world_example.md
data/prompts/: ai-game-master.yaml  starting-message.yaml
prompts/: ai-game-master.yaml  inventory-generation.yaml  story-generation.yaml  world-generation.yaml
src/: config.py  main.py  ui.py  utils.py
src/scripts/: story_generation.py  story_to_inventory.py  world_generation.py  world_to_story.py
tests/: test_inventory_generation.py  test_story_generation.py  test_ui.py  test_world_generation.py
