[project]
name = "ai-rpg"
version = "0.0.1"
description = ""
requires-python = ">=3.12"

[tool.black]
line-length = 120

[tool.mypy]
exclude = "(?x)(venv|docs|tmp)"
mypy_path = "./stubs"
explicit_package_bases = "true"

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip = ["env", "venv", ".venv", ".conda"]